--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -89,7 +89,7 @@ jobs:
 
   deploy-docker-images:
     runs-on: ubuntu-latest
-    needs: [python-tests, frontend-tests]
+    # needs: [python-tests, frontend-tests]
     strategy:
       matrix:
         docker: [bootstrap, core]
