--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -29,32 +29,24 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo ./core/tools/mavlink_router/bootstrap.sh
-        ./core/tools/ardupilot_tools/bootstrap.sh
         sudo apt install shellcheck
-        npm install \
-          eslint@7 eslint-plugin-vue eslint-plugin-html @vue/eslint-config-typescript @typescript-eslint/parser \
-          @typescript-eslint/eslint-plugin typescript @vue/eslint-config-airbnb@^5.3.0 @vue/cli-service \
-          eslint-plugin-simple-import-sort \
-          --save-dev
         python -m pip install --upgrade pip
-        pip install wheel # wheel need to be installed before mavproxy
-        pip install mavproxy
-        pip install pyfakefs pytest-cov pytest-timeout pylint pylint-pydantic mypy isort black==22.1.0 asyncmock types-requests \
-          pytest-mock nmeasim geographiclib ruff
-        pip install git+https://github.com/patrickelectric/pykson.git@master_fixes
-        ## Install our own libraries
-        python ./core/libs/bridges/setup.py install
-        python ./core/libs/commonwealth/setup.py install
-        ## We need to install loguru and appdirs since they may be used inside setup.py
-        python -m pip install --user appdirs==1.4.4 loguru==0.5.3
-        find . -type f -name "setup.py" | xargs --max-lines=1 --replace=% python % install --user
-        ## Fix Click version since its being updated to an old version by our packages
-        pip install click==8.0.0
+        pip install pipenv
+        pipenv install poetry && pipenv run poetry install
+        echo "installing mavlink-router"
+        pipenv run ./core/tools/mavlink_router/bootstrap.sh
+        echo "installing mavp2p"
+        pipenv run ./core/tools/mavp2p/bootstrap.sh
+        echo "installing ardupilot_tools"
+        pipenv run ./core/tools/ardupilot_tools/bootstrap.sh
+        pipenv run python ./core/libs/bridges/setup.py install
+        pipenv run python ./core/libs/commonwealth/setup.py install
+        rm -rf core/libs/bridges/build
+        rm -rf core/libs/commonwealth/build
 
     - name: Run tests
       run: |
-        ./.hooks/pre-push
+        .hooks/pre-push
 
     - name: Upload coverage
       uses: actions/upload-artifact@v3
@@ -71,25 +63,22 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Yarn install
-        uses: borales/actions-yarn@v4
+      - uses: oven-sh/setup-bun@v1
         with:
-          cmd: --cwd ./core/frontend install --frozen-lockfile --ignore-engines
+          bun-version: 1.0.3
 
-      - name: Yarn lint
-        uses: borales/actions-yarn@v4
-        with:
-          cmd: --cwd ./core/frontend lint --no-fix --ignore-engines --max-warnings=0
+      - name: Bun install
+        run: bun install --cwd ./core/frontend
 
-      - name: Yarn build
-        uses: borales/actions-yarn@v4
-        with:
-          cmd: --cwd ./core/frontend build --ignore-engines
+      - name: Bun lint
+        run: bun --cwd ./core/frontend lint
 
+      - name: Bun build
+        run: bun run --cwd ./core/frontend build
 
   deploy-docker-images:
     runs-on: ubuntu-latest
-    # needs: [python-tests, frontend-tests]
+    needs: [python-tests, frontend-tests]
     strategy:
       matrix:
         docker: [bootstrap, core]
@@ -123,7 +112,7 @@ jobs:
           echo "version=${VERSION}" >> $GITHUB_OUTPUT
           echo "buildx_args=\
             --build-arg GIT_DESCRIBE_TAGS=$(git describe --tags --long --always) \
-            --build-arg VUE_APP_GIT_DESCRIBE=$(git describe --long --always --dirty --all) \
+            --build-arg VITE_APP_GIT_DESCRIBE=$(git describe --long --always --dirty --all) \
             --cache-from 'type=local,src=/tmp/.buildx-cache' \
             --cache-to 'type=local,dest=/tmp/.buildx-cache' \
             ${TAGS} \
@@ -250,76 +239,76 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         if: startsWith(github.ref, 'refs/tags/') && success() && matrix.docker == 'core'
         with:
-          repo_token: ${{ secrets.GIT_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: '*.tar'
           tag: ${{ github.ref }}
           overwrite: true
           prerelease: true
           file_glob: true
 
-  # deploy-raspberry-image:
-  #   needs: deploy-docker-images
-  #   if: github.event_name != 'pull_request'
-  #   runs-on: self-hosted
-  #   # The runner for this job is a Raspberry Pi OS Bullseye.
-  #   # Just install docker (curl -sSL https://get.docker.com/ | sh) and follow the instructions for setting up a new runner in
-  #   # https://github.com/bluerobotics/BlueOS-docker/settings/actions/runners/new
+  deploy-raspberry-image:
+    needs: deploy-docker-images
+    if: github.event_name != 'pull_request'
+    runs-on: blueos-ci
+    # The runner for this job is a Raspberry Pi OS Bullseye.
+    # Just install docker (curl -sSL https://get.docker.com/ | sh) and follow the instructions for setting up a new runner in
+    # https://github.com/bluerobotics/BlueOS-docker/settings/actions/runners/new
 
-  #   strategy:
-  #     matrix:
-  #       platforms: ["linux/arm/v7"]
-  #   steps:
-  #     - name: Install git
-  #       run: sudo apt install -y git
+    strategy:
+      matrix:
+        platforms: ["linux/arm/v7"]
+    steps:
+      - name: Install git
+        run: sudo apt install -y git
 
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #       with:
-  #         submodules: recursive
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
 
 
-  #     # We use our own pimod as upstream doesn't provide armv7 images
-  #     - name: Pimod Build
-  #       run: |
-  #         VERSION=$GITHUB_REPOSITORY
-  #         VERSION=${VERSION:-master}
-  #         wget https://raw.githubusercontent.com/williangalvani/pimod/master/pimod.sh && chmod +x pimod.sh
-  #         docker run --rm --privileged \
-  #           -v $PWD:/files \
-  #           -e PATH=/pimod:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin \
-  #           -e GITHUB_REPOSITORY=$GITHUB_REPOSITORY \
-  #           -e VERSION=$GITHUB_REF_NAME \
-  #           --workdir=/files \
-  #           --platform ${{ matrix.platforms }} williangalvani/pimod:latest pimod.sh deploy/pimod/blueos.Pifile
+      # We use our own pimod as upstream doesn't provide armv7 images
+      - name: Pimod Build
+        run: |
+          VERSION=$GITHUB_REPOSITORY
+          VERSION=${VERSION:-master}
+          wget https://raw.githubusercontent.com/williangalvani/pimod/master/pimod.sh && chmod +x pimod.sh
+          docker run --rm --privileged \
+            -v $PWD:/files \
+            -e PATH=/pimod:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin \
+            -e GITHUB_REPOSITORY=$GITHUB_REPOSITORY \
+            -e VERSION=$GITHUB_REF_NAME \
+            --workdir=/files \
+            --platform ${{ matrix.platforms }} williangalvani/pimod:latest pimod.sh deploy/pimod/blueos.Pifile
 
-  #     # TODO: add GITHUB_REF_NAME after https://github.com/actions/upload-artifact/issues/231 is fixed
-  #     # name: blueos-${{ env.GITHUB_REF_NAME }}.zip
-  #     - name: Zip image
-  #       if: startsWith(github.ref, 'refs/tags/')
-  #       run: |
-  #         sudo apt install zip
-  #         zip BlueOS-raspberry.zip deploy/pimod/blueos.img
+      # TODO: add GITHUB_REF_NAME after https://github.com/actions/upload-artifact/issues/231 is fixed
+      # name: blueos-${{ env.GITHUB_REF_NAME }}.zip
+      - name: Zip image
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          sudo apt install zip
+          zip BlueOS-raspberry.zip deploy/pimod/blueos.img
 
-  #     - name: Upload artifact
-  #       uses: actions/upload-artifact@v3
-  #       with:
-  #         # We use the .img to avoid a zip of a zip
-  #         name: BlueOS-raspberry.zip
-  #         path: deploy/pimod/blueos.img
-  #         if-no-files-found: error
-  #         retention-days: 7
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          # We use the .img to avoid a zip of a zip
+          name: BlueOS-raspberry.zip
+          path: deploy/pimod/blueos.img
+          if-no-files-found: error
+          retention-days: 7
 
-  #     - name: Upload raspberry image for release
-  #       uses: svenstaro/upload-release-action@v2
-  #       if: startsWith(github.ref, 'refs/tags/')
-  #       with:
-  #         repo_token: ${{ secrets.GIT_TOKEN }}
-  #         file: BlueOS-raspberry.zip
-  #         tag: ${{ github.ref }}
-  #         overwrite: true
-  #         prerelease: true
+      - name: Upload raspberry image for release
+        uses: svenstaro/upload-release-action@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: BlueOS-raspberry.zip
+          tag: ${{ github.ref }}
+          overwrite: true
+          prerelease: true
 
-  #     # This is required because docker has root permissions, which means the runner is unable to clear this cache normally
-  #     - name: Cleanup
-  #       if: ${{ always() }}
-  #       run: sudo rm -rf .cache
+      # This is required because docker has root permissions, which means the runner is unable to clear this cache normally
+      - name: Cleanup
+        if: ${{ always() }}
+        run: sudo rm -rf .cache
