--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "blueos-docker"
 version = "0.0.1"
-description = "Blue Robotics BlueOS computer project"
+description = "Coratia Technologies CoratiaOS computer project"
 authors = ["software@bluerobotics.com"]
 license = "MIT"
 
