update version url

--- a/core/services/versionchooser/openapi/versionchooser.yaml
+++ b/core/services/versionchooser/openapi/versionchooser.yaml
@@ -31,7 +31,7 @@ paths:
               properties:
                 repository:
                   type: string
-                  example: bluerobotics/blueos-core
+                  example: coratia/blueos-core
                 tag:
                   type: string
                   example: master
@@ -89,7 +89,7 @@ paths:
               properties:
                 repository:
                   type: string
-                  example: bluerobotics/blueos-core
+                  example: coratia/blueos-core
                 tag:
                   type: string
                   example: master
@@ -169,7 +169,7 @@ paths:
               properties:
                 repository:
                   type: string
-                  example: bluerobotics/blueos-core
+                  example: coratia/blueos-core
                 tag:
                   type: string
                   example: master
@@ -201,7 +201,7 @@ components:
       properties:
         image:
           type: string
-          example: bluerobotics/blueos-core
+          example: coratia/blueos-core
         tag:
           type: string
           example: master
