--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -93,7 +93,7 @@ jobs:
     strategy:
       matrix:
         docker: [bootstrap, core]
-        project: [blueos]
+        project: [coratiaos]
         platforms: ["linux/arm/v7,linux/arm64/v8,linux/amd64"]
     steps:
       - name: Checkout
