--- a/core/services/versionchooser/openapi/versionchooser.yaml
+++ b/core/services/versionchooser/openapi/versionchooser.yaml
@@ -31,7 +31,7 @@ paths:
               properties:
                 repository:
                   type: string
-                  example: coratia/blueos-core
+                  example: coratia/coratiaos-core
                 tag:
                   type: string
                   example: master
@@ -89,7 +89,7 @@ paths:
               properties:
                 repository:
                   type: string
-                  example: coratia/blueos-core
+                  example: coratia/coratia-core
                 tag:
                   type: string
                   example: master
@@ -130,7 +130,7 @@ paths:
           schema:
             type: string
           required: true
-          example: blueos-core
+          example: coratiaos-core
       responses:
         '200':
           description: A list of versions available locally and on the remote(s)
@@ -169,7 +169,7 @@ paths:
               properties:
                 repository:
                   type: string
-                  example: coratia/blueos-core
+                  example: coratia/coratiaos-core
                 tag:
                   type: string
                   example: master
@@ -201,7 +201,7 @@ components:
       properties:
         image:
           type: string
-          example: coratia/blueos-core
+          example: coratia/coratiaos-core
         tag:
           type: string
           example: master
