--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "blueos-docker"
+name = "coratiaos-docker"
 version = "0.0.1"
 description = "Coratia Technologies CoratiaOS computer project"
 authors = ["software@bluerobotics.com"]
